@@ -4,12 +4,17 @@ from simplelayout.types.common.content import page
 from simplelayout.types.common.content.page import Page
 
 from AccessControl import ClassSecurityInfo
-from Products.Archetypes import atapi
 from simplelayout.types.news.config import PROJECTNAME
 from simplelayout.types.common.content.simplelayout_schemas import finalize_simplelayout_schema
 from zope.interface import implements
 from simplelayout.types.news.interfaces import INews
 from simplelayout.base.interfaces import ISimpleLayoutCapable
+
+from Products.ATContentTypes.config import HAS_LINGUA_PLONE
+if HAS_LINGUA_PLONE:
+    from Products.LinguaPlone.public import registerType
+else:
+    from Products.Archetypes.atapi import registerType
 
 
 news_schema = page.page_schema.copy() + imageSchema.copy()
@@ -18,6 +23,7 @@ news_schema['effectiveDate'].required = True
 news_schema['effectiveDate'].default_method = 'getDefaultEffectiveDate'
 
 finalize_simplelayout_schema(news_schema, folderish=True)
+
 
 class News(Page):
 
@@ -30,6 +36,4 @@ class News(Page):
         return DateTime().Date()
 
 
-
-atapi.registerType(News, PROJECTNAME)
-
+registerType(News, PROJECTNAME)
